tests/NormalTests/paczka2/big_fuzzy/90911956.err
Error in line 3: JVn A920 22,9
Error in line 2: 31z8lI S91 91,8
Error in line 8: S657 S91 97,4
Error in line 10: YNKcr S657 7,0
Error in line 7: 31z8lI S48 33,9
Error in line 25: ;1z8lI A920 25,6
Error in line 32: JVn S48 6,7
Error in line 36: YNKcr A920 18,2
Error in line 39: YNKcr S657 33,2
Error in line 46: TZT A920 21,7
Error in line 38: S657 S48 98,5
Error in line 56: S657 S657 12,0
Error in line 63: 3ip8lqtdEi S91 258,3
Error in line 77: JVn A920 323,41
Error in line 80: YNKcr S657 30,77
Error in line 76: TZT S91 73,9
Error in line 84: YNKcr S657 62,0
Error in line 86: TZT S48 53,3
Error in line 102: YNKcr S48 7,9
Error in line 92: JVn A920 6,5
Error in line 107: TZT A920 88,8
Error in line 111: TZT S657 29,1
Error in line 108: JVn S91 44,7
Error in line 118: JVn S48 9,3
Error in line 123: S657 S48 48,9
Error in line 124: S657 A920 42,4
Error in line 131: TZT S91 74,23
Error in line 129: S657 S48 0,0
Error in line 137: S657 S91 -3,4
Error in line 133: S657 S91 42,6
Error in line 140: YNKcr S657 81,9
Error in line 136: 31z8lI A920 3,7
Error in line 151: 3ip8lqtdEi S48 27,3
Error in line 157: 3ip8lqtdEi S91 41,43
Error in line 158: QYQ S91 8,0
Error in line 153: 3ip8lqtdEi S91 79,4
Error in line 165: 3ip8lqtdEi S657 3,3
Error in line 162: TZT S91 87,2
Error in line 166: 3ip8lqtdEi A920 20,9
Error in line 168: 3ip8lqtdEi S657 10,3
Error in line 167: TZT A920 99,2
Error in line 181: S657 S657 21,4
Error in line 184: 3ip8lqtdEi S48 97,5
Error in line 203: JVn S91 54,8
Error in line 221: S657 S48 68,3
Error in line 223: S657 S657 43,9
Error in line 229: S657 A920 24,4
Error in line 224: JVn S91 5,5
Error in line 231: 3ip8lqtdEi S48 2,5
Error in line 234: TZT S657 71,4
Error in line 246: YNKcr S91 23,68
Error in line 245: QYQ S48 100,4
